// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioToolbar Render with custom color? 1`] = `
<Fragment>
  <AnimatedComponent
    style={
      Object {
        "height": 0,
        "width": "100%",
      }
    }
  >
    <RadioDetailViewDefault
      onTouchImage={[Function]}
    />
  </AnimatedComponent>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Styled(View)
      color="#2e2e3a"
    >
      <Styled(Text)>
        Some Radio
      </Styled(Text)>
      <Styled(Text)
        bold={true}
        toRight={true}
      >
        111,11
      </Styled(Text)>
    </Styled(View)>
  </TouchableOpacity>
</Fragment>
`;

exports[`RadioToolbar Render? 1`] = `
<Fragment>
  <AnimatedComponent
    style={
      Object {
        "height": 0,
        "width": "100%",
      }
    }
  >
    <RadioDetailViewDefault
      onTouchImage={[Function]}
    />
  </AnimatedComponent>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Styled(View)
      color="transparent"
    >
      <Styled(Text)>
        Some Radio
      </Styled(Text)>
      <Styled(Text)
        bold={true}
        toRight={true}
      >
        111,11
      </Styled(Text)>
    </Styled(View)>
  </TouchableOpacity>
</Fragment>
`;
